<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context="com.fsck.k9.activity.setup.MailingListEmailListMenu"
    android:layout_height="match_parent">

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mailing_list_add_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add New Email Address" />

    <ListView
        android:id="@android:id/list"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</android.support.constraint.ConstraintLayout>