...
    <string name="empty_subject">Subject is empty, click again to send anyway</string>
    <string name="select_action">Select</string>
    <string name="deselect_action">Deselect</string>
    <string name="quick_reply_action">Quick Reply</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="archive_action">Archive</string>
    <string name="spam_action">Spam</string>
    <string name="forward_action">Forward</string>
    <string name="forward_as_attachment_action">Forward as attachment</string>
    <string name="move_action">Move</string>
    <string name="single_message_options_action">Send…</string>
...
    <string name="drafts_folder_label">Drafts folder</string>
    <string name="sent_folder_label">Sent folder</string>
    <string name="trash_folder_label">Trash folder</string>
    <string name="archive_folder_label">Archive folder</string>
    <string name="spam_folder_label">Spam folder</string>

    <string name="edit">Edit</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>

    <string name="account_setup_incoming_subscribed_folders_only_label">Show only subscribed folders</string>
    <string name="account_setup_auto_expand_folder">Auto-expand folder</string>

...
